# CMake-Cpp-Console-Application

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
App/: CMakeLists.txt
cmake/: utilities.cmake
